# ava

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
python/: ava-common.py  ava-tests.py  ava.py
vid/: Makefile
